--- a/style.css
+++ b/style.css
@@ -1,12 +1,32 @@
 body{
     font-family: 'Times New Roman', Times, serif;
+    margin-left: 7%;
+    margin-top: 7%;
 }
 span{
-    color: chocolate;
+    color:rgb(255, 165, 0)
 }
 h2{
     font-size: 42px;
+    color:green;
 }
 p{
     font-size: 29px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+}
+.diet{
+    display: flex;
+}
+section img{
+    width: 90%;
+    padding-right: 100px;
+}
+.link-button{
+    text-decoration: none;
+    border-radius: 5px;
+    color:black;
+    padding: 10px 10px 10px;
+    background-image: linear-gradient(orange,tomato);
+
 }
