--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-body{
-    font-family: 'Times New Roman', Times, serif;
-    margin-left: 7%;
-    margin-top: 7%;
-}
+
 span{
     color:rgb(255, 165, 0)
 }
@@ -11,12 +7,16 @@ h2{
     color:green;
 }
 p{
-    font-size: 29px;
+    font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
 }
 .diet{
     display: flex;
+    font-family: 'Times New Roman', Times, serif;
+    margin-left: 5%;
+    margin-top: 7%;
+    margin-right: 2%;
 }
 section img{
     width: 90%;
@@ -24,9 +24,91 @@ section img{
 }
 .link-button{
     text-decoration: none;
-    border-radius: 5px;
-    color:black;
-    padding: 10px 10px 10px;
-    background-image: linear-gradient(orange,tomato);
+    border-radius: 10px;
+    color: white;
+    padding: 10px 10px 10px 10px;
+    background-image: linear-gradient(rgb(241, 167, 28),rgb(252, 46, 10));
+    font-size: 1.1rem;
 
+}
+
+.number{
+    display: block;
+    background-image: url(Frame\ 57.jpg);
+    background-repeat:no-repeat;
+    padding-top:50px;
+}
+.container{
+    display: flex;
+}
+.image{
+    width: 400px;
+    height: 500px;
+    padding: 0px 20px;
+}
+.parag{
+    padding: 5px 25px 10px 100px;
+    text-align:left;
+}
+
+.menu{
+    text-align: center;
+    padding: 2px 10px 2px 10px;
+    margin-top: 5%;
+}
+h1{
+    font-size: 60px;
+    color: green;
+
+}
+.dish{
+    display: flex;
+}    
+.box{
+    border: 5px rgb(224, 218, 218);
+    padding: 2px 15px;
+    box-shadow: 1px 10px 10px 15px rgb(216, 210, 210);
+}
+.box img{
+    width: 100%;
+    height:50%;
+    border-radius: 20px;
+}
+.box h3{
+    padding: 5px 20px 10px 10px;
+    font-size: 1.7rem;
+}
+
+.service{
+    display: flex;
+   
+    margin-left:20% ;
+    margin-right: 20%;
+   margin-top: 5%;
+}
+.service h2{
+    padding: 0px 60px 0px 60px;
+    
+    text-align:left;
+    font-size: 3.2rem;
+    font-family:font-family: 'Tajawal', sans-serif;
+
+}
+.service p{
+    padding: 0px 25px 0px 23px;
+    font-size: 25px;
+    text-align:center ;
+}
+.end{
+    text-align: center;
+    background-color:rgb(20, 20, 29);
+    margin-top: 10%;
+
+}
+.end h2{
+   padding-top: 40px;
+}
+.end p{
+   color: white;
+   
 }
