--- a/style.css
+++ b/style.css
@@ -55,9 +55,10 @@ section img{
     text-align: center;
     padding: 2px 10px 2px 10px;
     margin-top: 5%;
+    font-size:-5rem;
 }
 h1{
-    font-size: 60px;
+    font-size: 50px;
     color: green;
 
 }
@@ -81,34 +82,34 @@ h1{
 
 .service{
     display: flex;
-   
-    margin-left:20% ;
-    margin-right: 20%;
-   margin-top: 5%;
+   justify-content: center;
 }
 .service h2{
-    padding: 0px 60px 0px 60px;
+    padding: 35px;
     
-    text-align:left;
-    font-size: 3.2rem;
+    text-align:center;
+    font-size: 2.5rem;
     font-family:font-family: 'Tajawal', sans-serif;
 
 }
 .service p{
-    padding: 0px 25px 0px 23px;
-    font-size: 25px;
+   
+    font-size: 20px;
     text-align:center ;
 }
 .end{
     text-align: center;
     background-color:rgb(20, 20, 29);
     margin-top: 10%;
+    height: 800px;
+    width: 100%;
 
 }
 .end h2{
-   padding-top: 40px;
+   padding-top: 2px 20px 0px 20px;
 }
 .end p{
    color: white;
+   padding: 0px 20px 10px 20px;
    
 }
